--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
     <title>Dashboard</title>
 </head>
-<body>
+<body class="bg-dark text-info">
     <div class="header">
         <h1>READY TO FIGHT {{this_user.first_name}}?!</h1>
         <h1>Create a Fighter or Choose a Challenger!</h1>
